--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "build": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp"
   },
   "author": "",
   "license": "ISC",
