--- a/wercker.yml
+++ b/wercker.yml
@@ -11,7 +11,7 @@ build:
     - script:
         name: build
         code: |
-          gulp
+          echo "gulp"
 
         name: echo nodejs information
         code: |
