--- a/wercker.yml
+++ b/wercker.yml
@@ -13,6 +13,7 @@ build:
         code: |
           echo "gulp"
 
+    - script:
         name: echo nodejs information
         code: |
           echo "node version $(node -v) running"
